// SPDX-FileCopyrightText: Copyright (c) 2024 Intel Corporation
//
// SPDX-License-Identifier: BSD-3-Clause

syntax = "proto3";

package sdk;

option go_package = "control-plane-agent/api/proxy/proto/sdk";

message ConfigMultipointGroup {
  string urn = 1;
}

enum ConnectionKind {
  CONN_KIND_TRANSMITTER = 0; ///< Unidirectional connection for sending data
  CONN_KIND_RECEIVER    = 1; ///< Unidirectional connection for receiving data
}

enum ST2110Transport {
  CONN_TRANSPORT_ST2110_20 = 0;
  CONN_TRANSPORT_ST2110_22 = 1;
  CONN_TRANSPORT_ST2110_30 = 2;
}

message ConfigST2110 {
  string remote_ip_addr     = 1;
  uint32 remote_port        = 2;
  ST2110Transport transport = 3;
  string pacing             = 4;
  uint32 payload_type       = 5;
}

message ConfigRDMA {
  string connection_mode = 1;
  uint32 max_latency_ns  = 2;
}

enum VideoPixelFormat {
  VIDEO_PIXEL_FORMAT_YUV422PLANAR10LE  = 0;
  VIDEO_PIXEL_FORMAT_V210              = 1;
  VIDEO_PIXEL_FORMAT_YUV422RFC4175BE10 = 2;
}

message ConfigVideo {
  uint32 width                  = 1;
  uint32 height                 = 2;
  double fps                    = 3;
  VideoPixelFormat pixel_format = 4;
}

enum AudioSampleRate {
  AUDIO_SAMPLE_RATE_48000 = 0;
  AUDIO_SAMPLE_RATE_96000 = 1;
  AUDIO_SAMPLE_RATE_44100 = 2;
}

enum AudioFormat {
  AUDIO_FORMAT_PCM_S8    = 0;
  AUDIO_FORMAT_PCM_S16BE = 1;
  AUDIO_FORMAT_PCM_S24BE = 2;
}

enum AudioPacketTime {
  AUDIO_PACKET_TIME_1MS    = 0;
  AUDIO_PACKET_TIME_125US  = 1;
  AUDIO_PACKET_TIME_250US  = 2;
  AUDIO_PACKET_TIME_333US  = 3;
  AUDIO_PACKET_TIME_4MS    = 4;
  AUDIO_PACKET_TIME_80US   = 5;
  AUDIO_PACKET_TIME_1_09MS = 6;
  AUDIO_PACKET_TIME_0_14MS = 7;
  AUDIO_PACKET_TIME_0_09MS = 8;
}

message ConfigAudio {
  uint32 channels             = 1;
  AudioSampleRate sample_rate = 2;
  AudioFormat format          = 3;
  AudioPacketTime packet_time = 4;
}

message ConnectionConfig {
  ConnectionKind kind                      = 1;
  uint32 buf_queue_capacity                = 2;
  uint32 max_payload_size                  = 3;
  uint32 max_metadata_size                 = 4;
  uint32 calculated_payload_size           = 5;
  oneof conn {
    ConfigMultipointGroup multipoint_group = 6;
    ConfigST2110 st2110                    = 7;
    ConfigRDMA rdma                        = 8;
  }
  oneof payload {
    ConfigVideo video                      = 9;
    ConfigAudio audio                      = 10;
  } 
}
